# Datasaz-solutions

./: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.js
api/: main.py  pyproject.toml
app/: globals.css  layout.tsx  page.tsx
app/accessibility/: page.tsx
app/api/chat/: route.ts
app/api/contact/: route.ts
app/articles/: page.tsx
app/articles/[id]/: page.tsx
app/company-policy/: page.tsx
app/privacy-policy/: page.tsx
app/terms-of-service/: page.tsx
components/: AISolutions.tsx  About.tsx  CaseStudies.tsx  Chaticon.tsx  Contact.tsx  Footer.tsx  Home.tsx  Insights.tsx  Navbar.tsx  Navigation.tsx  Services.tsx  SimpleFooter.tsx  SimpleNavbar.tsx  Technology.tsx  Testimonial.tsx
components/ui/: button.tsx  theme-toggle.tsx
hooks/: use-theme.tsx  use-toast.ts
lib/: streaming.ts  utils.ts
