[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "email-validator>=2.2.0",
    "faiss-cpu>=1.10.0",
    "fastapi>=0.115.12",
    "langchain-community>=0.3.21",
    "langchain-openai>=0.3.12",
    "langchain-text-splitters>=0.3.8",
    "langchain>=0.3.23",
    "pypdf>=5.4.0",
    "uvicorn>=0.34.0",
]
